--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	{% if title %}
-	<title>Django Blog - {{title}}</title>
-	{% else %}
-	<title>Django Blog</title>
-	{% endif %}
-</head>
-<body>
-	
-{% for post in posts %}
+{% extends "blog/base.html" %}
+{% block content %}
+	{% for post in posts %}
 
-<h1>{{ post.title }}</h1>
-<p><strong><em>By {{ post.author }} on {{ post.date_posted }}</em></strong></p>
-<p>{{ post.content }}</p>
+		<h1>{{ post.title }}</h1>
+		<p><strong><em>By {{ post.author }} on {{ post.date_posted }}</em></strong></p>
+		<p>{{ post.content }}</p>
 
-{% endfor %}
-
-
-</body>
-</html>
+	{% endfor %}
+{% endblock content %}
