Creating profile automatically when new user registers

--- a/django_project/users/templates/users/logout.html
+++ b/django_project/users/templates/users/logout.html
@@ -5,7 +5,7 @@
 
 	<div class="border-top pt-3">
 		<small class="text-muted">
-			<a href="{% url 'register' %}">Log In Again</a>
+			<a href="{% url 'login' %}">Log In Again</a>
 		</small>
 	</div>
 
