--- a/django_project/users/templates/users/password_reset_complete.html
+++ b/django_project/users/templates/users/password_reset_complete.html
@@ -1,8 +1,8 @@
 {% extends "blog/base.html" %}
 {% block content %}
 <div class = "alert alert-info">
-	An email with instructions to reset password sent to your email!
+	Your password has been set!
 </div>
 
-
+<a href="{% url 'login' %}">Log In here</a>
 {% endblock content %}
