--- a/django_project/blog/templates/blog/user_posts.html
+++ b/django_project/blog/templates/blog/user_posts.html
@@ -1,5 +1,16 @@
 {% extends "blog/base.html" %}
 {% block content %}
+
+    <div class="media">
+      <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+      <div class="media-body">
+        <h2 class="account-heading">{{ user.username }}</h2>
+        <p class="text-secondary">{{ user.email }}</p>
+      </div>
+    </div>
+
+    <p></p>
+
     <h1 class="mb-3">Posts by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
     {% for post in posts %}
         <article class="media content-section">
