Added user location option in profile & user_posts

--- a/django_project/blog/templates/blog/user_posts.html
+++ b/django_project/blog/templates/blog/user_posts.html
@@ -8,6 +8,7 @@
             <h2 class="account-heading">{{ post.author }}</h2>
             <p class="text-secondary">{{ post.author.email }}</p>
             <p class="text-secondary"><em>{{ post.author.profile.bio }}</em></p>
+            <p class="text-secondary">Lives in <strong><em>{{ user.profile.lives_in }}</em></strong></p>
           </div>
         </div>
       {% endif %}
