--- a/django_project/users/templates/users/profile.html
+++ b/django_project/users/templates/users/profile.html
@@ -9,6 +9,7 @@
 	      <h2 class="account-heading">{{ user.username }}</h2>
 	      <p class="text-secondary">{{ user.email }}</p>
 	      <p class="text-secondary"><em>{{ user.profile.bio }}</em></p>
+	      <p class="text-secondary">Lives in <strong><em>{{ user.profile.lives_in }}</em></strong></p>
 	    </div>
 	  </div>
 	  <form method="POST" enctype="multipart/form-data">
