--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -15,6 +15,16 @@
       </div>
       <h2 class="article-title">{{ object.title }}</h2>
       <p class="article-content">{{ object.content }}</p>
+      <form action="{% url 'like-post' %}" method="POST">
+              {% csrf_token %}
+              <input type="hidden" name="post_id" value="{{ post.id }}">
+              {% if user not in post.liked.all %}
+                <button class="btn btn-outline-info mb-4" type="submit">Like</button>
+              {% else %}
+                <button class="btn btn-info mb-4" type="submit">Unlike</button>
+              {% endif %}
+      </form>
+      <strong> {{ post.liked.all.count }} Likes</strong>
     </div>
   </article>
 {% endblock content %}
