--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -15,6 +15,7 @@
       </div>
       <h2 class="article-title">{{ object.title }}</h2>
       <p class="article-content">{{ object.content }}</p>
+      {% if object.author != user %}
       <form action="{% url 'like-post' %}" method="POST">
               {% csrf_token %}
               <input type="hidden" name="post_id" value="{{ post.id }}">
@@ -24,6 +25,7 @@
                 <button class="btn btn-info mb-4" type="submit">Unlike</button>
               {% endif %}
       </form>
+      {% endif %}
       <strong> {{ post.liked.all.count }} Likes</strong>
     </div>
   </article>
