--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -10,7 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
+
 
 	<title>Blog</title>
 
@@ -19,7 +20,7 @@
 	<header class="site-header">
 	  <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
 	    <div class="container">
-	      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Blog</a>
+	      <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Django Blog</a>
 		      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
 		      </button>
@@ -32,7 +33,7 @@
 	        <div class="navbar-nav">
 	        	{% if user.is_authenticated %}
 	        		<a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
-	        		<a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+	        		<a class="nav-item nav-link" href="{% url 'user_profile' %}">Profile</a>
 	        		<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
 	        	{% else %}
 		          	<a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
@@ -71,7 +72,7 @@
 	  </div>
 	</main>
 
-
+	
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
