--- a/django_project/users/templates/users/user_profile.html
+++ b/django_project/users/templates/users/user_profile.html
@@ -6,11 +6,26 @@
 	    <div class="media-body">
 	      <h2 class="account-heading">{{ user.username }}</h2>
 	      <p class="text-secondary">{{ user.email }}</p>
-	      <p class="text-secondary">{{ user.profile.followed.all.count }} Followers</p>
+		  {% if user.profile.followed.all.count == 0  %}
+			<p class="text-secondary"> <a href="#">
+			{{ user.profile.followed.all.count }} Follower
+			</a></p>
+	      {% elif user.profile.followed.all.count == 1 %}
+			<p class="text-secondary"> <a href="{% url 'followers' user %}">
+			{{ user.profile.followed.all.count }} Follower
+			</a></p>
+		  {% else %}
+			<p class="text-secondary"> <a href="{% url 'followers' user %}">
+			{{ user.profile.followed.all.count }} Followers
+			</a></p>
+		  {% endif %}
 	      <p class="text-secondary"><em>{{ user.profile.bio }}</em></p>
 	    </div>
 	  </div>
 	  <button class="btn btn-outline-info"><a href="{% url 'edit_profile' %}">Edit profile</a></button>
+
+
+
 
 </div>
 <h3 class="mb-3">My posts</h3>
