--- a/django_project/blog/templates/blog/base.html
+++ b/django_project/blog/templates/blog/base.html
@@ -32,7 +32,7 @@
 	        <!-- Navbar Right Side -->
 	        <div class="navbar-nav">
 	        	{% if user.is_authenticated %}
-	        		<a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
+	        		<a class="nav-item nav-link" href="{% url 'post-create' %}">New_Post</a>
 	        		<a class="nav-item nav-link" href="{% url 'user_profile' %}">Profile</a>
 	        		<a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
 	        	{% else %}
@@ -72,7 +72,7 @@
 	  </div>
 	</main>
 
-	
+
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
